# python_playground

./: README.md  pyproject.toml
json/: json_sample.json
