[project]
name = "python"
version = "0.1.0"
description = "General python project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.1.0",
    "obsws-python>=1.8.0",
    "psutil>=7.0.0",
    "pyqt6>=6.9.1",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
# many settings are not enabled even in strict mode, which is why basedpyright
# includes an "all" option you can then decide which rules you want to disable
typeCheckingMode = "strict"
